--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,13 @@
 	src: url(./fonts/Spectral-LightItalic.woff2);
 }
 
+@font-face {
+	font-family: 'Spectral';
+	font-weight: 800;
+	font-style: italic;
+	src: url(./fonts/Spectral-ExtraBoldItalic.woff2);
+}
+
 body {
 	max-width: 1920px;
 	margin: auto;
